# clipboard-sync

./: .gitignore  Cargo.toml  Makefile  README.md  clipboard-sync.service  control  daemon.sh  default.nix  flake.nix  run.sh  sync.py
src/: asyncification.rs  clipboard.rs  error.rs  log.rs  main.rs  mustatex.rs  sync.rs  zombies.rs
